// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Webhook Model request should match the snapshot 1`] = `
Object {
  "properties": Object {
    "callbackUrl": Object {
      "type": "string",
    },
    "event": Object {
      "type": "string",
    },
  },
  "title": "WebhookRequest",
  "type": "object",
}
`;

exports[`Webhook Model response should match the snapshot 1`] = `
Object {
  "properties": Object {
    "callbackUrl": Object {
      "type": "string",
    },
    "event": Object {
      "type": "string",
    },
    "id": Object {
      "type": "number",
    },
    "status": Object {
      "type": "string",
    },
  },
  "title": "WebhookResponse",
  "type": "object",
}
`;
